top 10 list style update

--- a/Views/Book/Top10.cshtml
+++ b/Views/Book/Top10.cshtml
@@ -17,7 +17,7 @@
                                 <p class="price">@book.Price kr.</p>
                             </div>
                             <div class="col-md-6 col-sm-6">
-                                <a asp-controller="Home" asp-action="Cart" class="btn btn-success right">Setja í körfu</a>
+                                <a asp-controller="Home" asp-action="Cart" class="btn btn-success right" id="toptenCartBtn">Setja í körfu</a>
                             </div>
                         </div>
                     </span>
