--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="~/css/category.css">
         <link rel="stylesheet" href="~/css/login.css">
         <link rel="stylesheet" href="~/css/signup.css">
+        <link rel="stylesheet" href="~/css/top10.css">
 
     </environment>
     <environment exclude="Development">
