--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -61,7 +61,7 @@
     <br/>
     <br/>
     <h1 class="carousel-heading frontpage-heading">Vinsælar bækur</h1>
-    <div class="container">
+    <div class="container" id="popularBooks">
         <div class="row">
             <div class="col-xs-12">
 
