--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -139,6 +139,9 @@
             <p>sími: 581-2345</p>
             <p>kennitala: 210196-3079</p>
             <p>Fylgdu okkur!</p>
+            <a href="https://www.instagram.com/kungfucave/" target="_blank">
+                <img id="instagram" src="~/images/insta-logo.png" style="height:20px; width:20px; margin-bottom: 10px;">
+            </a>
             <form class="form-inline">Skráðu þig á póstlistann:
                 <input type="email" class="form-control" size="50" placeholder="Netfang">
                 <button type="button" class="btn btn-danger">Skrá</button>
