--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -44,7 +44,7 @@
                     </tbody>
                   </table>
                   
-                  <a href="#" class="btn btn-primary">Mínar pantanir</a>
+                  <a asp-controller="Order" asp-action="OrderHistory" class="btn btn-primary">Mínar pantanir</a>
                   <a asp-controller="Account" asp-action="EditProfile" class="btn btn-primary">Breyta mínum upplýsingum</a>
                 </div>
               </div>
