--- a/Views/Home/SpecialOrd.cshtml
+++ b/Views/Home/SpecialOrd.cshtml
@@ -85,11 +85,17 @@
             <tr>
                 <th>Titill</th>
                 <th>Höfundur</th>
-                <th>ISBN</th>
+                <th>Útgáfuár</th>
                 <th>Magn</th>
             </tr>
             </thead>
             <tbody id="bookList">
+                <tr>
+                    <td>BOK</td>
+                    <td>ARI GUNNArs</td>
+                    <td>2018</td>
+                    <td>60</td>
+                </tr>
 
             </tbody>
         </table>
@@ -112,7 +118,7 @@
                 </div>
                     
                 <div class="form-group col-md-2">  
-                <label for="isbn"><b>ISBN (13 stafir)</b></label>
+                <label for="isbn"><b>Útgáfuár</b></label>
                 <input type="text" name="isbn"/>
                 </div>
 
