Table in special order working

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -157,6 +157,7 @@
         <script src="~/js/bookdetails.js" asp-append-version="true"></script>
         <script src="~/js/frontpage.js" asp-append-version="true"></script>
         <script src="~/js/category.js" asp-append-version="true"></script>
+        <script src="~/js/addbook.js" asp-append-version="true"></script>
         <!--script src="~/js/imageupload.js" asp-append-version="true"></script-->
     </environment>
     <environment exclude="Development">
