fixing error handlings

--- a/Views/Home/Donate.cshtml
+++ b/Views/Home/Donate.cshtml
@@ -77,11 +77,11 @@
   </div>
   <div class="form-check">
     <label class="form-check-label" for="terms-check">Ég samþykki skilmála</label>
-    <input  asp-for="Checked" type="checkbox"  value="yes" class="terms-check" id="terms-check" required/>
+    <input  asp-for="Checked" type="checkbox" class="terms-check" id="terms-check"/>
     <span asp-validation-for="Checked" class="text-danger"></span>
   </div>
   <div class="form-group">
-    <button class="btn btn-ddefault" type="submit">Senda pöntun</button>
+    <button class="btn btn-default" type="submit">Senda pöntun</button>
   </div>
   <!--button onclick="document.getElementById('id05').style.display='block'">Senda pöntun</button>
       <div id="id05" class="modal">
