email og fleira

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -20,6 +20,7 @@
                     </div>
                     <div class="form-group">
                         <input type="submit" class="btn btn-default" value="Skrá inn"/>
+                        <a asp-controller="Account" asp-action="Register">Nýr notandi?</a>
                     </div>
                 </form>
             </section>
