--- a/Views/Home/Confirmation.cshtml
+++ b/Views/Home/Confirmation.cshtml
@@ -1,5 +1,9 @@
- <div class="col-sm-8 text-left"> 
-      <h1>Pöntun þín hefur verið móttekin</h1>
-      <p>Takk fyrir að versla við okkur, þú hefur fengið staðfestingu á netfangið þitt!</p>
-      <hr>
-    </div>
+
+<div class="jumbotron text-xs-center">
+  <h1 class="display-3">Pöntun þín hefur verið móttekin!</h1>
+  <p class="lead"><strong>Vinsamlegast skoðaðu póstinn þinn,</strong> greiðslustaðfesting hefur verið send á netfangið þitt.</p>
+  <hr/>
+  <p class="lead">
+    <a class="btn btn-primary btn-sm" asp-controller="Home" asp-action="Index" role="button">Aftur á forsíðu</a>
+  </p>
+</div>
