--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -19,10 +19,11 @@
             
                     <h6 class="title-attr"><small>Fjöldi</small></h6>                    
                     <div>
-                        <input id="copies" type="number" asp-for="Copies" min="1" value="1">
-                        <br/>
-                        <a class="btn btn-success" onclick="addToCart()">Setja í körfu</a>
-                        
+                        <form method = "POST">
+                            <input id="copies" type="number" asp-for="Copies" min="1" value="1">
+                            <br/>
+                            <input class="btn btn-success" type="submit" value="Setja í körfu">
+                        </form>
                         <!--<div class="btn-minus" onclick="increment()"><span class="glyphicon glyphicon-minus"></span></div>
                             <input type="number" value="1" />
                         <div class="btn-plus"><span class="glyphicon glyphicon-plus"></span></div>-->
@@ -72,73 +73,5 @@
     </div>
 </div>
 <div>
-<!-- ADD TO CART button code. -->
-<form action="https://www.e-junkie.com/ecom/fgb.php?c=cart&cl=1&ejc=2" target="ej_ejc" method="POST">
+>
 
-<!-- paypal email(remove if not using PayPal) -->
-<input type="hidden" name="business" value="your_paypal_email"/>
-<!-- site url -->
-<input type="hidden" name="site_url" value="http://yoursite.com"/>
-
-<!-- contact email (where we can notify of the updates) -->
-<input type="hidden" name="contact_email" value="your@email.address"/>
-
-<!-- item name -->
-<input type="hidden" name="item_name" value="Test Item"/>
-<!-- item number (should be different for each product)-->
-<input type="hidden" name="item_number" value="1"/>
-<!-- item price -->
-<input type="hidden" name="amount" value="1.00"/>
-
-<!-- initial quantity -->
-<input type="hidden" name="quantity" value="1"/>
-
-<!-- item options (can be removed if not required) -->
-<input type="hidden" name="on0" value="Size"/>
-<select name="os0" >
-<option value="S">S</option><option value="M">M</option>
-</select>
-<input type="hidden" name="on1" value="Color"/>
-<select name="os1" >
-<option value="Orng">Orng</option><option value="Blk">Blk</option>
-</select>
-<input type="hidden" name="on2" value="Message"/>
-<input name="os2" type="text" value="Hello World"/>
-
-<!-- shipping cost -->
-<input type="hidden" name="shipping" value="1">
-
-<!-- shipping cost of each additional unit --> 
-<input type="hidden" name="shipping2" value="0.5">
-<!--handling cost --> 
-<input type="hidden" name="handling" value="0.5">
-
-<!-- tax (flat amount, NOT percentage)-->
-<input type="hidden" name="tax" value="0.50"/>
-
-<!-- following options are applicable to whole cart-->
-
-<!-- you thank you page -->
-<input type="hidden" name="return_url" value="http://www.e-junkie.com/"/>
-
-<!-- any custom info you want to pass for the whole order -->
-<input type="hidden" name="custom" value="anything"/>
-
-<!-- currency (For PayPal: any currency that PayPal supports -->
-<input type="hidden" name="currency_code" value="USD"/>
-
-<input type="image" src="https://www.e-junkie.com/ej/ej_add_to_cart.gif" border="0" onClick="javascript:return EJEJC_lc(this.parentNode);">
-</form> 
-
-
-<!-- VIEW CART button code. --> 
-<a href="https://www.e-junkie.com/ecom/fgb.php?c=cart&cl=1&ejc=2&
-business=your_paypal_email" target="ej_ejc" class="ec_ejc_thkbx" onClick="javascript:return EJEJC_lc(this);"><img src="https://www.e-junkie.com/ej/ej_view_cart.gif" border="0"></a>
-<script language="javascript" type="text/javascript">
-<!-- 
-function EJEJC_lc(th) { return false; }
-// -->
-</script>
-<script type="text/javascript"
-src="https://www.e-junkie.com/ecom/box.js"></script>
-</div>
