--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="~/css/login.css">
         <link rel="stylesheet" href="~/css/signup.css">
         <link rel="stylesheet" href="~/css/top10.css">
+        <link rel="stylesheet" href="~/css/filter.css">
 
     </environment>
     <environment exclude="Development">
