--- a/Views/Order/ReviewOrder.cshtml
+++ b/Views/Order/ReviewOrder.cshtml
@@ -1,4 +1,4 @@
-@model List<BookCave.Models.ViewModels.BookDetailsViewModel>
+@model BookCave.Models.ViewModels.ReviewOrderViewModel
 
 <div class="container">
 	<div class="row">
