--- a/Views/Account/EditProfile.cshtml
+++ b/Views/Account/EditProfile.cshtml
@@ -34,7 +34,7 @@
                                 <option value="7">Bandaríkin</option>
                             </select>
                             <!--input type="text" asp-for="Address" class="form-control" placeholder="Vinsamlegast skrifaðu heimilisfang hér"/-->
-                            <span asp-validation-for="Address"></span><br>
+                            <span asp-validation-for="CountryId"></span><br>
                         </div>
                     </div>
                     <div class="form-group">
