added music and fixed email format

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -135,7 +135,12 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
+    
             <footer class="container-fluid text-center">
+            <p>Vantar þig smá <b>tónlist</b> í líf þitt? Við björgum þér!</p>
+            <audio loop="true" src="~/Music/bookcavelag.mp3" controls>
+                <p>If you are reading this, it is because your browser does not support the audio element.</p>
+            </audio>
             <!--<p>Online Store Copyright</p> -->
             <p>contactus&commat;bookcave.is</p>
             <p>sími: 581-2345</p>
