--- a/Views/Order/ReviewOrder.cshtml
+++ b/Views/Order/ReviewOrder.cshtml
@@ -1,9 +1,60 @@
 @model BookCave.Models.ViewModels.ReviewOrderViewModel
 
-<div class="container">
+<div class="col-xs-12">
+    <div class="grid invoice">
+        <div class="grid-body">
+            <div class="invoice-title">
+                <br>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h2>Yfirlit<br>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-xs-6">
+                    <address>
+                        <strong>Billed To:</strong><br>
+                        Twitter, Inc.<br>
+                        795 Folsom Ave, Suite 600<br>
+                        San Francisco, CA 94107<br>
+                        <abbr title="Phone">P:</abbr> (123) 456-7890
+                    </address>
+                </div>
+                <div class="col-xs-6 text-right">
+                    <address>
+                        <strong>Shipped To:</strong><br>
+                        Elaine Hernandez<br>
+                        P. Sherman 42,<br>
+                        Wallaby Way, Sidney<br>
+                        <abbr title="Phone">P:</abbr> (123) 345-6789
+                    </address>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6">
+                    <address>
+                        <strong>Payment Method:</strong><br>
+                        Visa ending **** 1234<br>
+                        h.elaine@gmail.com<br>
+                    </address>
+                </div>
+                <div class="col-xs-6 text-right">
+                    <address>
+                        <strong>Order Date:</strong><br>
+                        17/06/14
+                    </address>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--div class="container">
 	<div class="row">
 		<div class="table-responsive">
-            <h1 class="entry-title"><span>Yfirlit á pöntun</span></h1>
+            <h1 class="entry-title"><span>Pöntunin mín</span></h1>
             <hr/>
             <table class="table table-bordered">
                 <thead>
@@ -58,4 +109,4 @@
             <a asp-controller="Home" asp-action="Cart" class="btn btn-primary">Til baka í körfu</a>
         </div>
 	</div>
-</div>
+</div-->
