--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,6 +1,6 @@
 @model BookCave.Models.ViewModels.CartViewModel
 
-<<h1>Karfan þín</h1>
+<h1>Karfan þín</h1>
 <div class="container">
     <div class="row">
         <div class="col-sm-12 col-md-10 col-md-offset-1">    
@@ -28,7 +28,7 @@
                             <a class="thumbnail pull-left"> <img class="media-object" src="@book.Image" style="width: 72px; height: 72px;"> </a>
                             <div class="media-body">
                                 <h4 class="media-heading">@book.Name</h4>
-                                <h5 class="media-heading"> by Vigdís Birna</h5>
+                                <h5 class="media-heading">@book.Author</h5>
                             </div>
                         </div></td>
                         <td class="col-sm-1 col-md-1" style="text-align: center">
