--- a/Views/Home/OurTeam.cshtml
+++ b/Views/Home/OurTeam.cshtml
@@ -31,7 +31,7 @@
     </div>
     <div class="col-sm-3">
       <p>Þorgeir Kristján Þorgeirsson,</p>
-      <p>andlegur stuðningsmaður</p>
+      <p>sérfræðingur í útlitsmótun</p>
       <img src="~/images/thorgeir.jpg" class="img-responsive" style="width:100%" alt="Image"/>
     </div>
   </div>
