--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -9,7 +9,7 @@
             </div>
             <div class="panel-body">
               <div class="row">
-                <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="@Model.Image" class="img-circle img-responsive"> </div>
+                <div id = "profileImage"class="col-md-3 col-lg-3 " align="center" style="border:none;"> <img alt="User Pic" src="@Model.Image" class="img-circle img-responsive"> </div>
                 
                 <div class=" col-md-9 col-lg-9 "> 
                   <table class="table table-user-information">
